--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,16 @@
             <artifactId>cglib</artifactId>
             <version>3.2.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.1.26</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>JavaDemo</finalName>
