--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,12 @@
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
+        <!--EasyOCR图像识别-->
+        <dependency>
+            <groupId>cn.easyproject</groupId>
+            <artifactId>easyocr</artifactId>
+            <version>3.0.4-RELEASE</version>
+        </dependency>
         <dependency>
             <groupId>com.google.protobuf</groupId>
             <artifactId>protobuf-java</artifactId>
